gcc/testsuite/gcc.dg/plugin/diagnostic-test-nesting-text-plain.c
/* { dg-do compile } */

extern void foo (void);

void test_nesting (void)
{
  foo (); /* { dg-error "top-level error" } */
}
